# semiGlobalMatchingWithOpencv

./: CMakeLists.txt  README.md
include/: sgbmWithOpencv.h
src/: sgbmWithOpencv.cpp  testSgbm.cpp
